tail + blinking